[gd_scene load_steps=23 format=3 uid="uid://b51i7qoebn64d"]

[ext_resource type="Texture2D" uid="uid://cm1aq8bct2umc" path="res://Sprites/Inimigos/VigilantDrone/Drone_atirando-Sheet.png" id="1_3fbd4"]
[ext_resource type="Script" uid="uid://dj51h4kp17250" path="res://Scripts/watcher_drone.gd" id="1_eeyen"]
[ext_resource type="Texture2D" uid="uid://tt0um1oy0q6y" path="res://Sprites/Inimigos/VigilantDrone/Drone_morrendo-Sheet.png" id="2_eeyen"]
[ext_resource type="Texture2D" uid="uid://bfbsccf4s4dsp" path="res://Sprites/Inimigos/VigilantDrone/Drone_idle-Sheet.png" id="3_iuv5w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iv0kk"]
atlas = ExtResource("1_3fbd4")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ifjc"]
atlas = ExtResource("1_3fbd4")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk0gn"]
atlas = ExtResource("1_3fbd4")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrduq"]
atlas = ExtResource("1_3fbd4")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_wetiq"]
atlas = ExtResource("1_3fbd4")
region = Rect2(288, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxu01"]
atlas = ExtResource("2_eeyen")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpq5y"]
atlas = ExtResource("2_eeyen")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgne2"]
atlas = ExtResource("2_eeyen")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_kais5"]
atlas = ExtResource("2_eeyen")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_layqv"]
atlas = ExtResource("2_eeyen")
region = Rect2(288, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4mkf"]
atlas = ExtResource("3_iuv5w")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e56i"]
atlas = ExtResource("3_iuv5w")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wpfy"]
atlas = ExtResource("3_iuv5w")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktmia"]
atlas = ExtResource("3_iuv5w")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s2f6"]
atlas = ExtResource("3_iuv5w")
region = Rect2(288, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_netss"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv0kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ifjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk0gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrduq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wetiq")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxu01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpq5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgne2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kais5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_layqv")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4mkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e56i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wpfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktmia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s2f6")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3fbd4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eeyen"]

[node name="WatcherDrone" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 65
script = ExtResource("1_eeyen")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_netss")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3fbd4")

[node name="Hitbox" type="Area2D" parent="." groups=["LethalArea"]]
position = Vector2(6, 0)
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-5.9999995, -4.7683716e-07)
scale = Vector2(0.974567, -1.0265913)
shape = SubResource("CircleShape2D_eeyen")
debug_color = Color(0.9935954, 0.05292581, 0.14363751, 0.41960785)

[node name="CellingDetector" type="RayCast2D" parent="."]
position = Vector2(7.999999, 5)
rotation = 3.097418
target_position = Vector2(0, 30)

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(2, 8)
rotation = 1.5702989
target_position = Vector2(48, 0)
collision_mask = 2

[node name="ShootStartPosition" type="Node2D" parent="."]
position = Vector2(5, 5)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
